--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <header>
-
-    <h1>TechStore</h1>
+<button class="menu-toggle" onclick="toggleSidebar()">☰</button>
+    <h1 class=""txt>TechStore</h1>
     <nav>
       <a href="#">Home</a>
       <a href="#">Produtos</a>
